# near-grant-protocol

./: Cargo.toml  DESIGN.md  README.md
registry/: Cargo.toml  README.md
registry/src/: lib.rs  storage.rs
token/: Cargo.toml
token/src/: event_core.rs  events.rs  ext.rs  ft_receiver.rs  lib.rs  metadata.rs  migration.rs  storage_impl.rs  token.rs  types.rs  utils.rs
token/src/approval/: approval_impl.rs  mod.rs  receiver.rs
token/src/core/: core_impl.rs  ft_receiver.rs  mod.rs  receiver.rs  resolver.rs
token/src/enumeration/: enumeration_impl.rs
token/src/token_holders/: mod.rs  token_holders_impl.rs
