[workspace]
resolver = "1"
members = [
    "registry",
    "token",
]

[workspace.package]
edition = "2021"
license = "Mozilla Public License Version 2.0"
repository = "https://github.com/scale-it/near-grant-protocol"
authors = [
    "Robert Zaremba",
    "Stanislaw Czembor"
]

[profile.release]
codegen-units = 1
opt-level = "s"
# link time optimization
lto = true
panic = "abort"
overflow-checks = true
debug = false
debug-assertions = false
rpath = false

[workspace.dependencies]
near-sdk = "^4.1.1"
uint = { version = "^0.9.5", default-features = false }
serde_json = "^1.0"
thiserror = "1.0"
itertools = "^0.11"
