[package]
name = "token"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
# rlib is needed for integration tests
crate-type = ["cdylib", "rlib"]

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
itertools.workspace = true
